--- a/google-cloud-network/docker-compose-cli-pc1.yaml
+++ b/google-cloud-network/docker-compose-cli-pc1.yaml
@@ -17,14 +17,14 @@ services:
   
   peer0_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
-    hostname: peer0.hprovider.healthcare.com
+    hostname: peer0_hprovider_healthcare_com
     env_file: env/.peer1-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer0_hprovider_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer0_hprovider_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer0_hprovider_healthcare_com:/var/hyperledger/production
     ports:
       - 7051:7051
