--- a/google-cloud-network/docker-compose-cli-pc2.yaml
+++ b/google-cloud-network/docker-compose-cli-pc2.yaml
@@ -20,14 +20,14 @@ services:
 
   peer1_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
-    hostname: peer1.hprovider.healthcare.com
+    hostname: peer1_hprovider_healthcare_com
     env_file: env/.peer1-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer1_hprovider_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer1_hprovider_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer1_hprovider_healthcare_com:/var/hyperledger/production
     ports:
       - 8051:8051
@@ -48,8 +48,8 @@ services:
     command: peer node start
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer2_hprovider_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer2_hprovider_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer2_hprovider_healthcare_com:/var/hyperledger/production
     ports:
       - 11051:8051
@@ -64,14 +64,14 @@ services:
 
   peer3_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
-    hostname: peer3.hprovider.healthcare.com
+    hostname: peer3_hprovider_healthcare_com
     env_file: env/.peer3-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer3_hprovider_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer3_hprovider_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer3_hprovider_healthcare_com:/var/hyperledger/production
     ports:
       - 12051:8051
@@ -92,8 +92,8 @@ services:
     command: peer node start
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer4.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer4.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer4_hprovider_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/hprovider_healthcare_com/peers/peer4_hprovider_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer4_hprovider_healthcare_com:/var/hyperledger/production
     ports:
       - 13051:8051
@@ -118,13 +118,13 @@ services:
   #     #- FABRIC_LOGGING_SPEC=DEBUG
   #     - FABRIC_LOGGING_SPEC=INFO
   #     - CORE_PEER_ID=cli_pc2
-  #     - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
+  #     - CORE_PEER_ADDRESS=peer0.hprovider_healthcare_com:7051
   #     - CORE_PEER_LOCALMSPID=HProviderMSP
   #     - CORE_PEER_TLS_ENABLED=true
-  #     - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.crt
-  #     - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.key
-  #     - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/ca.crt
-  #     - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
+  #     - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider_healthcare_com/peers/peer0.hprovider_healthcare_com/tls/server.crt
+  #     - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider_healthcare_com/peers/peer0.hprovider_healthcare_com/tls/server.key
+  #     - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider_healthcare_com/peers/peer0.hprovider_healthcare_com/tls/ca.crt
+  #     - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider_healthcare_com/users/Admin@hprovider_healthcare_com/msp
   #   working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
   #   command: /bin/bash
   #   volumes:
