--- a/google-cloud-network/docker-compose-cli-pc4.yaml
+++ b/google-cloud-network/docker-compose-cli-pc4.yaml
@@ -22,9 +22,9 @@ networks:
     env_file: .peer2-rs-env
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
-        - peer2.research.healthcare.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/research_healthcare_com/peers/peer2_research_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/research_healthcare_com/peers/peer2_research_healthcare_com/tls:/etc/hyperledger/fabric/tls
+        - peer2_research_healthcare_com:/var/hyperledger/production
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     ports:
@@ -45,8 +45,8 @@ networks:
     env_file: .peer3-rs-env
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/research_healthcare_com/peers/peer3_research_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/research_healthcare_com/peers/peer3_research_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer3_research_healthcare_com:/var/hyperledger/production
     ports:
       - 15051:10051
@@ -68,8 +68,8 @@ networks:
     env_file: .peer4-rs-env
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer4.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer4.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/research_healthcare_com/peers/peer4_research_healthcare_com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/research_healthcare_com/peers/peer4_research_healthcare_com/tls:/etc/hyperledger/fabric/tls
         - peer4_research_healthcare_com:/var/hyperledger/production
     ports:
       - 16051:10051
@@ -112,7 +112,7 @@ networks:
   #       - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
   #       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
   #   depends_on:
-  #     - peer1.research.healthcare.com
-  #     - peer2.research.healthcare.com
+  #     - peer1.research_healthcare_com
+  #     - peer2_research_healthcare_com
   #   networks:
   #     - health_network
