--- a/google-cloud-network/configtx.yaml
+++ b/google-cloud-network/configtx.yaml
@@ -25,7 +25,7 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: crypto-config/ordererOrganizations/healthcare.com/msp
+        MSPDir: crypto-config/ordererOrganizations/healthcare_com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -49,7 +49,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: HProviderMSP
 
-        MSPDir: crypto-config/peerOrganizations/hprovider.healthcare.com/msp
+        MSPDir: crypto-config/peerOrganizations/hprovider_healthcare_com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -70,7 +70,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.hprovider.healthcare.com
+            - Host: peer0_hprovider_healthcare_com
               Port: 7051
 
     - &Research
@@ -81,7 +81,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: ResearchMSP
 
-        MSPDir: crypto-config/peerOrganizations/research.healthcare.com/msp
+        MSPDir: crypto-config/peerOrganizations/research_healthcare_com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -101,7 +101,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.research.healthcare.com
+            - Host: peer0_research_healthcare_com
               Port: 9051
 
 ################################################################################
@@ -220,7 +220,7 @@ Orderer: &OrdererDefaults
     OrdererType: solo
 
     Addresses:
-        - orderer.healthcare.com:7050
+        - orderer_healthcare_com:7050
 
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
@@ -254,10 +254,10 @@ Orderer: &OrdererDefaults
         # a subset of the host:port items enumerated in this list should be
         # replicated under the Orderer.Addresses key above.
         Consenters:
-            - Host: orderer.healthcare.com
+            - Host: orderer_healthcare_com
               Port: 7050
-              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls/server.crt
-              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls/server.crt
+              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
             - Host: orderer2.healthcare.com
               Port: 7050
               ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2.healthcare.com/tls/server.crt
@@ -373,7 +373,7 @@ Profiles:
             OrdererType: kafka
             Kafka:
                 Brokers:
-                - kafka.healthcare.com:9092
+                - kafka_healthcare_com:9092
 
             Organizations:
             - *OrdererOrg
@@ -398,10 +398,10 @@ Profiles:
             OrdererType: etcdraft
             EtcdRaft:
                 Consenters:
-                - Host: orderer.healthcare.com
+                - Host: orderer_healthcare_com
                   Port: 7050
-                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls/server.crt
-                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls/server.crt
+                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
+                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
                 - Host: orderer2.healthcare.com
                   Port: 7050
                   ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2.healthcare.com/tls/server.crt
@@ -419,7 +419,7 @@ Profiles:
                   ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5.healthcare.com/tls/server.crt
                   ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5.healthcare.com/tls/server.crt
             Addresses:
-                - orderer.healthcare.com:7050
+                - orderer_healthcare_com:7050
                 - orderer2.healthcare.com:7050
                 - orderer3.healthcare.com:7050
                 - orderer4.healthcare.com:7050
