--- a/google-cloud-network/configtx.yaml
+++ b/google-cloud-network/configtx.yaml
@@ -258,22 +258,22 @@ Orderer: &OrdererDefaults
               Port: 7050
               ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
               ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
-            - Host: orderer2.healthcare.com
+            - Host: orderer2_healthcare_com
               Port: 7050
-              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2.healthcare.com/tls/server.crt
-              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2.healthcare.com/tls/server.crt
-            - Host: orderer3.healthcare.com
+              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2_healthcare_com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2_healthcare_com/tls/server.crt
+            - Host: orderer3_healthcare_com
               Port: 7050
-              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3.healthcare.com/tls/server.crt
-              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3.healthcare.com/tls/server.crt
-            - Host: orderer4.healthcare.com
+              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3_healthcare_com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3_healthcare_com/tls/server.crt
+            - Host: orderer4_healthcare_com
               Port: 7050
-              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4.healthcare.com/tls/server.crt
-              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4.healthcare.com/tls/server.crt
-            - Host: orderer5.healthcare.com
+              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4_healthcare_com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4_healthcare_com/tls/server.crt
+            - Host: orderer5_healthcare_com
               Port: 7050
-              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5.healthcare.com/tls/server.crt
-              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5.healthcare.com/tls/server.crt
+              ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5_healthcare_com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5_healthcare_com/tls/server.crt
 
     # Organizations is the list of orgs which are defined as participants on
     # the orderer side of the network
@@ -402,28 +402,28 @@ Profiles:
                   Port: 7050
                   ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
                   ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer_healthcare_com/tls/server.crt
-                - Host: orderer2.healthcare.com
+                - Host: orderer2_healthcare_com
                   Port: 7050
-                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2.healthcare.com/tls/server.crt
-                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2.healthcare.com/tls/server.crt
-                - Host: orderer3.healthcare.com
+                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2_healthcare_com/tls/server.crt
+                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer2_healthcare_com/tls/server.crt
+                - Host: orderer3_healthcare_com
                   Port: 7050
-                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3.healthcare.com/tls/server.crt
-                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3.healthcare.com/tls/server.crt
-                - Host: orderer4.healthcare.com
+                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3_healthcare_com/tls/server.crt
+                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer3_healthcare_com/tls/server.crt
+                - Host: orderer4_healthcare_com
                   Port: 7050
-                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4.healthcare.com/tls/server.crt
-                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4.healthcare.com/tls/server.crt
-                - Host: orderer5.healthcare.com
+                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4_healthcare_com/tls/server.crt
+                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer4_healthcare_com/tls/server.crt
+                - Host: orderer5_healthcare_com
                   Port: 7050
-                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5.healthcare.com/tls/server.crt
-                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5.healthcare.com/tls/server.crt
+                  ClientTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5_healthcare_com/tls/server.crt
+                  ServerTLSCert: crypto-config/ordererOrganizations/healthcare.com/orderers/orderer5_healthcare_com/tls/server.crt
             Addresses:
                 - orderer_healthcare_com:7050
-                - orderer2.healthcare.com:7050
-                - orderer3.healthcare.com:7050
-                - orderer4.healthcare.com:7050
-                - orderer5.healthcare.com:7050
+                - orderer2_healthcare_com:7050
+                - orderer3_healthcare_com:7050
+                - orderer4_healthcare_com:7050
+                - orderer5_healthcare_com:7050
 
             Organizations:
             - *OrdererOrg
