--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -15,15 +15,14 @@ services:
   ca_hprovider_healthcare_com:
     image: hyperledger/fabric-ca:$IMAGE_TAG
     #container_name: ca.hprovider.healthcare.com
+    hostname: ca.hprovider.healthcare.com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      #- FABRIC_CA_SERVER_CA_NAME=ca.hprovider.healthcare.com
+      - FABRIC_CA_SERVER_CA_NAME=ca_hprovider_healthcare_com
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca_hprovider_healthcare_com-cert.pem
       - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/${BYFN_CA1_PRIVATE_KEY}
       - FABRIC_CA_SERVER_PORT=7054
-    ports:
-      - "7054:7054"
     command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca_hprovider_healthcare_com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/${BYFN_CA1_PRIVATE_KEY} -b admin:adminpw -d'
     volumes:
       - ./crypto-config/peerOrganizations/hprovider_healthcare_com/ca/:/etc/hyperledger/fabric-ca-server-config
@@ -31,6 +30,8 @@ services:
       mode: replicated
       placement:
         constraints: [node.role == manager]
+    ports:
+      - "7054:7054"
     networks:
       health_network:
         aliases:
