--- a/google-cloud-network/docker-compose-ca-pc2.yaml
+++ b/google-cloud-network/docker-compose-ca-pc2.yaml
@@ -13,23 +13,23 @@ networks:
 services:
   ca_research_healthcare_com:
     image: hyperledger/fabric-ca:$IMAGE_TAG
+    hostname: ca_research_healthcare_com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      #- FABRIC_CA_SERVER_CA_NAME=ca.research.healthcare.com
+      - FABRIC_CA_SERVER_CA_NAME=ca_research_healthcare_com
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca_research_healthcare_com-cert.pem
       - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/${BYFN_CA2_PRIVATE_KEY}
       - FABRIC_CA_SERVER_PORT=8054
-    ports:
-      - "8054:8054"
     command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca_research_healthcare_com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/${BYFN_CA2_PRIVATE_KEY} -b admin:adminpw -d'
     volumes:
       - ./crypto-config/peerOrganizations/research_healthcare_com/ca/:/etc/hyperledger/fabric-ca-server-config
-    #hostname: ca.research.healthcare.com
     deploy:
       mode: replicated
       placement:
         constraints: [node.role == worker]
+    ports:
+      - "8054:8054"
     networks:
       health_network:
         aliases:
