--- a/hyperledger-swarm/configtx.yaml
+++ b/hyperledger-swarm/configtx.yaml
@@ -1,5 +1,5 @@
 Profiles:
-  TwoOrgsChannel:
+  HealthChannel:
     Consortium: HealthConsortium
     Application:
       Organizations:
@@ -15,7 +15,7 @@ Profiles:
         AnchorPeers:
         - Host: peer0.research.healthcare.com
           Port: 7051
-  TwoOrgsOrdererGenesis:
+  HealthOrdererGenesis:
     Orderer:
       OrdererType: kafka
       Addresses:
