--- a/hyperledger-swarm/crypto-config.yaml
+++ b/hyperledger-swarm/crypto-config.yaml
@@ -1,19 +1,19 @@
 OrdererOrgs:
 - Name: Orderer
-  Domain: qsoft.com
+  Domain: healthcare.com
   Specs:
   - Hostname: orderer0
   - Hostname: orderer1
   - Hostname: orderer2
 PeerOrgs:
-- Name: Org1
-  Domain: org1.qsoft.com
+- Name: HProvider
+  Domain: hprovider.healthcare.com
   Template:
     Count: 1
   Users:
     Count: 1
-- Name: Org2
-  Domain: org2.qsoft.com
+- Name: Research
+  Domain: research.healthcare.com
   Template:
     Count: 1
   Users:
