--- a/hyperledger-swarm/hyperledger-ca.yaml
+++ b/hyperledger-swarm/hyperledger-ca.yaml
@@ -22,9 +22,9 @@ services:
     - FABRIC_CA_SERVER_CA_NAME=ca-hprovider
     - FABRIC_CA_SERVER_TLS_ENABLED=true
     - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.hprovider.healthcare.com-cert.pem
-    - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/${cd crypto-config/peerOrganizations/hprovider.healthcare.com/ca && ls *_sk}
+    - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/${BYFN_CA1_PRIVATE_KEY}
     command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.hprovider.healthcare.com-cert.pem
-      --ca.keyfile /etc/hyperledger/fabric-ca-server-config/${cd crypto-config/peerOrganizations/hprovider.healthcare.com/ca && ls *_sk} -b admin:adminpw
+      --ca.keyfile /etc/hyperledger/fabric-ca-server-config/${BYFN_CA1_PRIVATE_KEY} -b admin:adminpw
       -d'
     volumes:
     - ./crypto-config/peerOrganizations/hprovider.healthcare.com/ca/:/etc/hyperledger/fabric-ca-server-config
@@ -46,9 +46,9 @@ services:
     - FABRIC_CA_SERVER_CA_NAME=ca-research
     - FABRIC_CA_SERVER_TLS_ENABLED=true
     - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.research.healthcare.com-cert.pem
-    - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/${cd crypto-config/peerOrganizations/research.healthcare.com/ca && ls *_sk}
+    - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/${BYFN_CA2_PRIVATE_KEY}
     command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.research.healthcare.com-cert.pem
-      --ca.keyfile /etc/hyperledger/fabric-ca-server-config/${cd crypto-config/peerOrganizations/research.healthcare.com/ca && ls *_sk} -b admin:adminpw
+      --ca.keyfile /etc/hyperledger/fabric-ca-server-config/${BYFN_CA2_PRIVATE_KEY} -b admin:adminpw
       -d'
     volumes:
     - ./crypto-config/peerOrganizations/research.healthcare.com/ca/:/etc/hyperledger/fabric-ca-server-config
