--- a/google-cloud-network/docker-compose-hlf-orderer.yaml
+++ b/google-cloud-network/docker-compose-hlf-orderer.yaml
@@ -23,9 +23,9 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
-        - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-        - ../crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/msp/:/var/hyperledger/orderer/msp
-        - ../crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls/:/var/hyperledger/orderer/tls
+        - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
+        - ./crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/msp/:/var/hyperledger/orderer/msp
+        - ./crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls/:/var/hyperledger/orderer/tls
         - orderer.healthcare.com:/var/hyperledger/production/orderer
     deploy:
       placement:
