--- a/google-cloud-network/docker-compose-cli-pc1.yaml
+++ b/google-cloud-network/docker-compose-cli-pc1.yaml
@@ -17,6 +17,7 @@ services:
   
   peer0_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
+    container_name: peer0.hprovider.healthcare.com
     hostname: peer0.hprovider.healthcare.com
     env_file: env/.peer1-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
