--- a/google-cloud-network/docker-compose-cli-pc2.yaml
+++ b/google-cloud-network/docker-compose-cli-pc2.yaml
@@ -19,6 +19,7 @@ networks:
 services:
 
   peer1_hprovider_healthcare_com:
+    container_name: peer1.hprovider.healthcare.com
     image: hyperledger/fabric-peer:$IMAGE_TAG
     hostname: peer1.hprovider.healthcare.com
     env_file: env/.peer1-hp-env
@@ -42,6 +43,7 @@ services:
   
   
   peer2_hprovider_healthcare_com:
+    container_name: peer2.hprovider.healthcare.com
     image: hyperledger/fabric-peer:$IMAGE_TAG
     hostname: peer2.hprovider.healthcare.com
     env_file: env/.peer2-hp-env
@@ -66,6 +68,7 @@ services:
 
   peer3_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
+    container_name: peer3.hprovider.healthcare.com
     hostname: peer3.hprovider.healthcare.com
     env_file: env/.peer3-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
@@ -89,6 +92,7 @@ services:
   
   peer4_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
+    container_name: peer4.hprovider.healthcare.com
     hostname: peer4.hprovider.healthcare.com
     env_file: env/.peer4-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
